setTime and css update

--- a/css/main.css
+++ b/css/main.css
@@ -3,3 +3,12 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+#time {
+  font-size: 2rem;
+  border: 2px solid #000;
+  border-color: rgb(14, 92, 125);
+  color: rgb(14, 92, 125);
+  padding: 1rem 3rem;
+  border-radius: 8px;
+}
